# ai-code-commenter

./: README.md  pyproject.toml
ai_code_commenter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commenter/: cli.py  docs_writer.py  processor.py
test-app/: Button.tsx  DOCS.md  Test.backup_20260322_205755.tsx  Test.tsx
