[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-commenter"
version = "0.1.0"
description = "CLI tool that adds AI-generated comments to code and writes documentation"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "ollama",
    "rich",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
comment-code = "commenter.cli:main"